--- a/package.json
+++ b/package.json
@@ -57,10 +57,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "@supabase/supabase-js": "latest",
-    "@supabase/ssr": "latest",
-    "@supabase/auth-helpers-nextjs": "latest"
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
